\name{NEWS}
\title{NEWS file for the iNZightMR package}
\encoding{UTF-8}

\section{Changes in version 2.1}{
  Release date: 10 October 2015
  
  \subsection{BUG FIXES}{
    \itemize{
      \item fix a bug that gave an "Inverse" error message
    }
  }
}

\section{Changes in version 2.0}{
  Release date: 26 May 2015
  
  \subsection{MAJOR CHANGES}{
    \itemize{
      \item the new version of iNZightMR uses the latest iNZightPlots
      (>2.0) instead of its own
    }
  }
}

\section{New release Version 1.1}{
  No user-level changes, however released to coincide with major update
  of iNZightVIT.
}

\section{Changes in version 1.0.2-20130700}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item First release of new package. Contains multiple response subset
      used for the 'iNZight' package.
    }
  }
}