@@ -1,8 +1,8 @@
 Package: iNZightMR
 Type: Package
 Title: iNZightMR
-Version: 2.1
-Date: 2015-10-06
+Version: 2.1.1
+Date: 2015-10-19
 Authors@R: c(person("Junjie", "Zeng", role = c("aut", "cre"),
     email = "jzen188@aucklanduni.ac.nz"),
     person("Simon", "Potter", role = c("aut"))
@@ -10,9 +10,9 @@ Authors@R: c(person("Junjie", "Zeng", role = c("aut", "cre"),
 Depends:
     R (>= 2.13)
 Imports:
-    iNZightRegression, iNZightPlots
+    iNZightRegression
 Suggests:
-    iNZight
+    iNZight, iNZightPlots
 LazyData: true
 Description: Interaction and analysis of Multiple Response Data
 License: GPL-2
